<resources>
    <string name="app_name">RecyclerView</string>
    <string name="text_positive_btn">save</string>
    <string name="text_negative_btn">cancel</string>
    <string name="hint_lastname_field">Surname</string>
    <string name="hint_phone_field">Phone</string>
    <string name="hint_name_field">Name</string>

    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="remove">Remove</string>
</resources>
